--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
  <header>
-    <h1>My Online Store</h1>
+    <h1>CaseCrater Store</h1>
     <nav>
         <div class="cart">
             <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
