New Contact and About pages, changed index page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Store</title>
+  <title>CaseCrater Store</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
