--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="cart">
             <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
           </div>               
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">Products</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
