fixed navigation links

--- a/checkout.html
+++ b/checkout.html
@@ -15,10 +15,10 @@
         <div class="cart">
             <span>Cart: </span><span id="cart-count">0</span>
         </div>          
-      <a href="index.html">Home</a>
-      <a href="#">Products</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="#">Products</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
   </header>
 
