--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
     <h1>My Online Store</h1>
     <nav>
         <div class="cart">
-            <span>Cart: </span><span id="cart-count">0</span>
-        </div>          
+            <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
+          </div>         
       <a href="index.html">Home</a>
       <a href="#">Products</a>
-      <a href="about.html">About</a>
+      <a href="about.html" class="active">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
