--- a/checkout.html
+++ b/checkout.html
@@ -12,9 +12,9 @@
   <header>
     <h1>My Online Store</h1>
     <nav>
-        <div class="cart">
-            <span>Cart: </span><span id="cart-count">0</span>
-        </div>          
+      <div class="cart">
+        <a href="checkout.html" class="active">Cart: <span id="cart-count">0</span></a>
+      </div>         
         <a href="index.html">Home</a>
         <a href="#">Products</a>
         <a href="about.html">About</a>
