--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,12 @@
     <h1>My Online Store</h1>
     <nav>
         <div class="cart">
-            <span>Cart: </span><span id="cart-count">0</span>
-        </div>          
+            <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
+          </div>          
         <a href="index.html">Home</a>
         <a href="#">Products</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
 
