--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="cart">
             <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
           </div>               
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="#">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
