--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
         <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
       </div>     
     <a href="index.html">Home</a>
-    <a href="#" class="active">Products</a>
+    <a href="product.html" class="active">Products</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
