--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
           </div>               
       <a href="index.html" class="active">Home</a>
-      <a href="#">Products</a>
+      <a href="product.html">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
