--- a/checkout.html
+++ b/checkout.html
@@ -12,11 +12,14 @@
   <header>
     <h1>My Online Store</h1>
     <nav>
+      <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search products...">
+      </div>
       <div class="cart">
         <a href="checkout.html" class="active">Cart: <span id="cart-count">0</span></a>
       </div>         
         <a href="index.html">Home</a>
-        <a href="#">Products</a>
+        <a href="product.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
