--- a/product.html
+++ b/product.html
@@ -13,6 +13,9 @@
   <h1>My Online Store</h1>
   <nav>
     <div class="cart">
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search products...">
+          </div>
         <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
       </div>     
     <a href="index.html">Home</a>
