--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
   <header>
     <h1>My Online Store</h1>
     <nav>
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search products...">
+          </div>
         <div class="cart">
             <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
           </div>          
