--- a/product.html
+++ b/product.html
@@ -3,59 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product - My Online Store</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png">
+  <title>Product Name | My Online Store</title>
 </head>
 <body>
-  
-<header>
-  <h1>My Online Store</h1>
-  <nav>
-    <div class="cart">
-        <div class="search-container">
-            <input type="text" id="search-input" placeholder="Search products...">
-          </div>
-        <a href="checkout.html">Cart: <span id="cart-count">0</span></a>
-      </div>     
-    <a href="index.html">Home</a>
-    <a href="product.html" class="active">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+  <header>
+    <h1>My Online Store</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<main>
-  <h2>Product Title</h2>
-  <div class="product-page">
-    <img src="https://via.placeholder.com/300" alt="Product Image">
-    <div class="product-info">
-      <p>Category: Category 1</p>
-      <p>Price: $99.99</p>
-      <button class="add-to-cart">Add to Cart</button>
+  <main>
+    <div class="product-page">
+      <img src="path/to/product-image.jpg" alt="Product Name">
+      <div class="product-info">
+        <h2>Product Name</h2>
+        <p>Product description goes here. This is where you describe the product and its features.</p>
+        <p>Price: $XX.XX</p>
+      </div>
     </div>
-  </div>
-  <h3>Related Products</h3>
-  <div class="related-products">
-    <!-- Add related product items here -->
-  </div>
-</main>
 
-<footer>
-  <p>&copy; 2023 My Online Store. All rights reserved.</p>
-</footer>
+    <section class="reviews">
+      <h2>Reviews</h2>
+      <ul id="reviews-list">
+      </ul>
+      <h3>Leave a review</h3>
+      <form id="review-form">
+        <label for="review-name">Name:</label>
+        <input type="text" id="review-name" required>
+        <label for="review-text">Review:</label>
+        <textarea id="review-text" required></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+  </main>
 
-<script src="scripts.js"></script>
-
-<div id="cart-overlay" class="hidden">
-  <div class="cart-content">
-    <h2>Shopping Cart</h2>
-    <ul id="cart-items">
-      <!-- Cart items will be added here -->
-    </ul>
-    <button id="close-cart">Close Cart</button>
-  </div>
-</div>
-  
+  <footer>
+    &copy; 2023 My Online Store. All rights reserved.
+  </footer>
+  <script src="main.js"></script>
 </body>
 </html>
