--- a/product.html
+++ b/product.html
@@ -12,6 +12,7 @@
     <h1>My Online Store</h1>
     <nav>
       <a href="index.html">Home</a>
+      <a href="product.html" class="active">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
